--- a/iOS/Issue-Trackker/Issue-Trackker/Issue.storyboard
+++ b/iOS/Issue-Trackker/Issue-Trackker/Issue.storyboard
@@ -20,24 +20,114 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hZU-e3-Pal">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="muD-Is-Z0n">
-                                    <size key="itemSize" width="413" height="139"/>
-                                    <size key="estimatedItemSize" width="413" height="139"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="10" id="muD-Is-Z0n">
+                                    <size key="itemSize" width="390" height="198"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <size key="footerReferenceSize" width="50" height="18"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="38"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="T7z-bh-iBg">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="IssueCell" id="T7z-bh-iBg" customClass="IssueCell" customModule="Issue_Trackker" customModuleProvider="target">
                                         <rect key="frame" x="0.5" y="0.0" width="413" height="198"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="R2d-dA-oxj">
                                             <rect key="frame" x="0.0" y="0.0" width="413" height="198"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eUy-Va-KvF">
+                                                    <rect key="frame" x="16" y="24" width="56" height="26.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="zzzz" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hJb-Ov-vMT">
+                                                    <rect key="frame" x="16" y="66.5" width="381" height="20.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="41" id="Wbg-HM-Ch6"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" systemColor="systemGrayColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="milestone" translatesAutoresizingMaskIntoConstraints="NO" id="nls-CO-x8m">
+                                                    <rect key="frame" x="16" y="105" width="17" height="18"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bVG-wu-dJU">
+                                                    <rect key="frame" x="37" y="105" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xzC-TH-Skl" customClass="PaddingLabel" customModule="Issue_Trackker" customModuleProvider="target">
+                                                    <rect key="frame" x="16" y="142" width="42" height="21"/>
+                                                    <color key="backgroundColor" systemColor="linkColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="15"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="paddingLeft">
+                                                            <real key="value" value="16"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="paddingRight">
+                                                            <real key="value" value="16"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="paddingTop">
+                                                            <real key="value" value="4"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="paddingBottom">
+                                                            <real key="value" value="4"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="nls-CO-x8m" firstAttribute="top" secondItem="hJb-Ov-vMT" secondAttribute="bottom" constant="18" id="GCL-vr-hko"/>
+                                                <constraint firstItem="bVG-wu-dJU" firstAttribute="leading" secondItem="nls-CO-x8m" secondAttribute="trailing" constant="4" id="I9s-dk-M4c"/>
+                                                <constraint firstAttribute="trailing" secondItem="hJb-Ov-vMT" secondAttribute="trailing" constant="16" id="Jam-dm-I9o"/>
+                                                <constraint firstItem="xzC-TH-Skl" firstAttribute="leading" secondItem="R2d-dA-oxj" secondAttribute="leading" constant="16" id="O6B-e1-8yt"/>
+                                                <constraint firstItem="nls-CO-x8m" firstAttribute="leading" secondItem="R2d-dA-oxj" secondAttribute="leading" constant="16" id="Ubo-rB-Km6"/>
+                                                <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="eUy-Va-KvF" secondAttribute="trailing" constant="341" id="ZIO-gl-yEC"/>
+                                                <constraint firstItem="eUy-Va-KvF" firstAttribute="leading" secondItem="R2d-dA-oxj" secondAttribute="leading" constant="16" id="gVf-QP-Tb1"/>
+                                                <constraint firstItem="eUy-Va-KvF" firstAttribute="top" secondItem="R2d-dA-oxj" secondAttribute="top" constant="24" id="pt7-pg-zcU"/>
+                                                <constraint firstItem="bVG-wu-dJU" firstAttribute="top" secondItem="hJb-Ov-vMT" secondAttribute="bottom" constant="18" id="rhA-oK-AIY"/>
+                                                <constraint firstItem="hJb-Ov-vMT" firstAttribute="top" secondItem="eUy-Va-KvF" secondAttribute="bottom" constant="16" id="she-s6-jSs"/>
+                                                <constraint firstItem="xzC-TH-Skl" firstAttribute="top" secondItem="bVG-wu-dJU" secondAttribute="bottom" constant="16" id="xEo-hS-irZ"/>
+                                                <constraint firstItem="hJb-Ov-vMT" firstAttribute="leading" secondItem="R2d-dA-oxj" secondAttribute="leading" constant="16" id="y5N-Aj-SdN"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="413" height="198"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="15"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                     </collectionViewCell>
                                 </cells>
+                                <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="IssueCellFooter" id="Qul-xi-LN9">
+                                    <rect key="frame" x="0.0" y="236" width="414" height="18"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="아래로 당기면 검색바가 보여요! 👀" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HJT-SC-Jd4">
+                                            <rect key="frame" x="115.5" y="1" width="183.5" height="16"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <color key="textColor" systemColor="systemGray2Color"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstItem="HJT-SC-Jd4" firstAttribute="centerY" secondItem="Qul-xi-LN9" secondAttribute="centerY" id="px8-ZS-Sk4"/>
+                                        <constraint firstItem="HJT-SC-Jd4" firstAttribute="centerX" secondItem="Qul-xi-LN9" secondAttribute="centerX" id="sQy-3O-w7c"/>
+                                    </constraints>
+                                </collectionReusableView>
+                                <connections>
+                                    <outlet property="dataSource" destination="Y6W-OH-hqX" id="ADa-Hr-Zmd"/>
+                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="gds-kF-nCE"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
@@ -51,6 +141,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="RVf-Cp-GUS"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="issueCollectionView" destination="hZU-e3-Pal" id="YIz-5H-aRG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -76,8 +169,18 @@
         </scene>
     </scenes>
     <resources>
+        <image name="milestone" width="17" height="18"/>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
